--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -5,16 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>config</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>log4j-config-admin-bom</artifactId>
+    <version>${revision}</version>
   </parent>
 
   <artifactId>log4j-config-admin-parent</artifactId>
-
-  <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+  <packaging>pom</packaging>
 
 </project>
