--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,145 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+         child.project.url.inherit.append.path="false">
+
+  <!-- ██     ██  █████  ██████  ███    ██ ██ ███    ██  ██████  ██
+       ██     ██ ██   ██ ██   ██ ████   ██ ██ ████   ██ ██       ██
+       ██  █  ██ ███████ ██████  ██ ██  ██ ██ ██ ██  ██ ██   ███ ██
+       ██ ███ ██ ██   ██ ██   ██ ██  ██ ██ ██ ██  ██ ██ ██    ██
+        ███ ███  ██   ██ ██   ██ ██   ████ ██ ██   ████  ██████  ██
+
+       `log4j-config-admin` project modules should use `log4j-config-admin-parent` as their parents, not this POM!
+       This POM constitutes the BOM to be imported by applications using `log4j-config-admin` project modules. -->
+
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>org.apache.logging</groupId>
+    <artifactId>logging-parent</artifactId>
+    <version>10.5.0</version>
+  </parent>
+
   <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>config</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>log4j-config-admin-bom</artifactId>
+  <version>${revision}</version>
+  <packaging>pom</packaging>
+
+  <url>https://logging.apache.org/log4j/config-admin</url>
+
+  <inceptionYear>2024</inceptionYear>
+
+  <developers>
+
+    <developer>
+      <name>Apache Logging Services team</name>
+      <email>dev@logging.apache.org</email>
+      <url>https://logging.apache.org/team-list.html</url>
+    </developer>
+
+  </developers>
+
+  <modules>
+
+    <!-- the parent POM must come first: -->
+    <module>parent</module>
+
+    <!-- Modules here must have a corresponding entry in `dependencyManagement > dependencies` block below! -->
+    <module>api</module>
+    <module>log4j-core</module>
+    <module>logback</module>
+    <module>jul</module>
+
+  </modules>
+
+  <scm child.scm.connection.inherit.append.path="false" child.scm.developerConnection.inherit.append.path="false"
+       child.scm.url.inherit.append.path="false">
+    <connection>scm:git:git@github.com:apache/logging-log4j-config-admin.git</connection>
+    <developerConnection>scm:git:git@github.com:apache/logging-log4j-config-admin.git</developerConnection>
+    <tag>HEAD</tag>
+    <url>https://github.com/apache/logging-log4j-config-admin</url>
+  </scm>
+
+  <issueManagement>
+    <system>GitHub Issues</system>
+    <url>https://github.com/apache/logging-log4j-config-admin/issues</url>
+  </issueManagement>
+
+  <ciManagement>
+    <system>GitHub Actions</system>
+    <url>https://github.com/apache/logging-log4j-config-admin/actions</url>
+  </ciManagement>
+
+  <distributionManagement>
+    <downloadUrl>https://logging.apache.org/log4j/config-admin/latest/#distribution</downloadUrl>
+  </distributionManagement>
 
   <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <!-- project version -->
+    <revision>0.1.0-SNAPSHOT</revision>
+
+    <!-- disable `maven-site-plugin`-->
+    <maven.site.skip>true</maven.site.skip>
+    <maven.site.deploy.skip>true</maven.site.deploy.skip>
+
   </properties>
+
+
+  <!-- `dependencyManagement` must only contain `log4j-transform` modules and nothing else!
+       Modules here must have a corresponding entry in `modules` block above! -->
+  <dependencyManagement>
+    <dependencies>
+
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-config-admin-api</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-config-admin-jul</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-config-admin-log4j-core</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-config-admin-logback</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+    </dependencies>
+  </dependencyManagement>
+
+  <build>
+    <plugins>
+
+      <!-- Enable BOM flattening -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>flatten-maven-plugin</artifactId>
+        <version>${flatten-maven-plugin.version}</version>
+        <executions>
+          <execution>
+            <id>flatten-bom</id>
+            <goals>
+              <goal>flatten</goal>
+            </goals>
+            <phase>process-resources</phase>
+            <inherited>false</inherited>
+          </execution>
+        </executions>
+      </plugin>
+
+    </plugins>
+  </build>
 
 </project>
