--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -1,15 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<!--
+  ~ Licensed to the Apache Software Foundation (ASF) under one or more
+  ~ contributor license agreements.  See the NOTICE file distributed with
+  ~ this work for additional information regarding copyright ownership.
+  ~ The ASF licenses this file to you under the Apache License, Version 2.0
+  ~ (the "License"); you may not use this file except in compliance with
+  ~ the License.  You may obtain a copy of the License at
+  ~
+  ~      http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-config-admin-parent</artifactId>
+    <groupId>org.apache.logging.admin</groupId>
+    <artifactId>logging-admin-parent</artifactId>
     <version>${revision}</version>
     <relativePath>../parent</relativePath>
   </parent>
 
-  <artifactId>log4j-config-admin-log4j-core</artifactId>
+  <artifactId>logging-admin-log4j-core</artifactId>
+  <name>Apache Logging Admin: Log4j Core implementation</name>
+  <description>Implementation of the Apache Logging Admin API for Log4j Core.</description>
+
+  <properties>
+    <bnd-module-name>org.apache.logging.admin.log4j</bnd-module-name>
+  </properties>
+
+  <dependencies>
+
+    <dependency>
+      <groupId>org.apache.logging.admin</groupId>
+      <artifactId>logging-admin-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.24.1</version>
+    </dependency>
+
+  </dependencies>
 
 </project>
