--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-         child.project.url.inherit.append.path="false">
+<!--
+  ~ Licensed to the Apache Software Foundation (ASF) under one or more
+  ~ contributor license agreements.  See the NOTICE file distributed with
+  ~ this work for additional information regarding copyright ownership.
+  ~ The ASF licenses this file to you under the Apache License, Version 2.0
+  ~ (the "License"); you may not use this file except in compliance with
+  ~ the License.  You may obtain a copy of the License at
+  ~
+  ~      http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" child.project.url.inherit.append.path="false" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <!-- ██     ██  █████  ██████  ███    ██ ██ ███    ██  ██████  ██
        ██     ██ ██   ██ ██   ██ ████   ██ ██ ████   ██ ██       ██
@@ -10,8 +23,8 @@
        ██ ███ ██ ██   ██ ██   ██ ██  ██ ██ ██ ██  ██ ██ ██    ██
         ███ ███  ██   ██ ██   ██ ██   ████ ██ ██   ████  ██████  ██
 
-       `log4j-config-admin` project modules should use `log4j-config-admin-parent` as their parents, not this POM!
-       This POM constitutes the BOM to be imported by applications using `log4j-config-admin` project modules. -->
+       `logging-admin` project modules should use `logging-admin-parent` as their parents, not this POM!
+       This POM constitutes the BOM to be imported by applications using `logging-admin` project modules. -->
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -21,8 +34,8 @@
     <version>10.5.0</version>
   </parent>
 
-  <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j-config-admin-bom</artifactId>
+  <groupId>org.apache.logging.admin</groupId>
+  <artifactId>logging-admin-bom</artifactId>
   <version>${revision}</version>
   <packaging>pom</packaging>
 
@@ -53,26 +66,25 @@
 
   </modules>
 
-  <scm child.scm.connection.inherit.append.path="false" child.scm.developerConnection.inherit.append.path="false"
-       child.scm.url.inherit.append.path="false">
-    <connection>scm:git:git@github.com:apache/logging-log4j-config-admin.git</connection>
-    <developerConnection>scm:git:git@github.com:apache/logging-log4j-config-admin.git</developerConnection>
+  <scm child.scm.connection.inherit.append.path="false" child.scm.developerConnection.inherit.append.path="false" child.scm.url.inherit.append.path="false">
+    <connection>scm:git:git@github.com:apache/logging-logging-admin.git</connection>
+    <developerConnection>scm:git:git@github.com:apache/logging-logging-admin.git</developerConnection>
     <tag>HEAD</tag>
-    <url>https://github.com/apache/logging-log4j-config-admin</url>
+    <url>https://github.com/apache/logging-admin</url>
   </scm>
 
   <issueManagement>
     <system>GitHub Issues</system>
-    <url>https://github.com/apache/logging-log4j-config-admin/issues</url>
+    <url>https://github.com/apache/logging-admin/issues</url>
   </issueManagement>
 
   <ciManagement>
     <system>GitHub Actions</system>
-    <url>https://github.com/apache/logging-log4j-config-admin/actions</url>
+    <url>https://github.com/apache/logging-admin/actions</url>
   </ciManagement>
 
   <distributionManagement>
-    <downloadUrl>https://logging.apache.org/log4j/config-admin/latest/#distribution</downloadUrl>
+    <downloadUrl>https://logging.apache.org/admin/#distribution</downloadUrl>
   </distributionManagement>
 
   <properties>
@@ -86,33 +98,32 @@
 
   </properties>
 
-
   <!-- `dependencyManagement` must only contain `log4j-transform` modules and nothing else!
        Modules here must have a corresponding entry in `modules` block above! -->
   <dependencyManagement>
     <dependencies>
 
       <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-config-admin-api</artifactId>
+        <groupId>org.apache.logging.admin</groupId>
+        <artifactId>logging-admin-api</artifactId>
         <version>${project.version}</version>
       </dependency>
 
       <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-config-admin-jul</artifactId>
+        <groupId>org.apache.logging.admin</groupId>
+        <artifactId>logging-admin-jul</artifactId>
         <version>${project.version}</version>
       </dependency>
 
       <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-config-admin-log4j-core</artifactId>
+        <groupId>org.apache.logging.admin</groupId>
+        <artifactId>logging-admin-log4j-core</artifactId>
         <version>${project.version}</version>
       </dependency>
 
       <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-config-admin-logback</artifactId>
+        <groupId>org.apache.logging.admin</groupId>
+        <artifactId>logging-admin-logback</artifactId>
         <version>${project.version}</version>
       </dependency>
 
